refactor: Simplified GetRank method.

--- a/benchmarks/0.9.7.0_encode.md
+++ b/benchmarks/0.9.7.0_encode.md
@@ -4,21 +4,33 @@ BenchmarkDotNet=v0.13.5, OS=macOS Ventura 13.3.1 (a) (22E772610a) [Darwin 22.4.0
 Apple M1 Pro, 1 CPU, 10 logical and 10 physical cores
 .NET SDK=7.0.203
   [Host]     : .NET 7.0.5 (7.0.523.17405), Arm64 RyuJIT AdvSIMD
-  Job-XLSUNQ : .NET 7.0.5 (7.0.523.17405), Arm64 RyuJIT AdvSIMD DEBUG
+  Job-TPZBNU : .NET 7.0.5 (7.0.523.17405), Arm64 RyuJIT AdvSIMD DEBUG
 
 BuildConfiguration=Debug  
 
 ```
-|              Method |                Data |           Mean |        Error |       StdDev | Ratio |     Gen0 |     Gen1 |   Gen2 | Allocated | Alloc Ratio |
-|-------------------- |-------------------- |---------------:|-------------:|-------------:|------:|---------:|---------:|-------:|----------:|------------:|
-|   **SharpTokenV1_0_28** | **1. (...)57. [19866]** | **5,301,619.9 ns** | **93,313.71 ns** | **72,853.21 ns** |  **1.00** | **601.5625** | **296.8750** |      **-** | **3805771 B** |        **1.00** |
-| TiktokenSharpV1_0_5 | 1. (...)57. [19866] | 1,674,605.4 ns | 14,542.22 ns | 13,602.80 ns |  0.32 | 253.9063 | 128.9063 | 3.9063 | 1571158 B |        0.41 |
-|            Tiktoken | 1. (...)57. [19866] |   887,726.7 ns |  3,753.84 ns |  3,134.62 ns |  0.17 |  80.0781 |  32.2266 |      - |  506425 B |        0.13 |
-|                     |                     |                |              |              |       |          |          |        |           |             |
-|   **SharpTokenV1_0_28** |       **Hello, World!** |     **3,286.1 ns** |      **8.25 ns** |      **7.72 ns** |  **1.00** |   **0.6752** |   **0.0038** |      **-** |    **4240 B** |        **1.00** |
-| TiktokenSharpV1_0_5 |       Hello, World! |     6,729.4 ns |     30.61 ns |     23.90 ns |  2.05 |   2.1820 |   0.0458 |      - |   13728 B |        3.24 |
-|            Tiktoken |       Hello, World! |       547.5 ns |      5.29 ns |      4.42 ns |  0.17 |   0.1144 |        - |      - |     720 B |        0.17 |
-|                     |                     |                |              |              |       |          |          |        |           |             |
-|   **SharpTokenV1_0_28** | **King(...)edy. [275]** |    **62,614.2 ns** |    **500.66 ns** |    **443.82 ns** |  **1.00** |   **8.5449** |   **0.4883** |      **-** |   **54160 B** |        **1.00** |
-| TiktokenSharpV1_0_5 | King(...)edy. [275] |    21,797.8 ns |     53.99 ns |     50.50 ns |  0.35 |   5.0964 |   0.3052 |      - |   32096 B |        0.59 |
-|            Tiktoken | King(...)edy. [275] |    10,511.8 ns |     27.65 ns |     24.51 ns |  0.17 |   1.0986 |   0.0153 |      - |    6904 B |        0.13 |
+|                     Method |  Categories |                Data |           Mean | Ratio |     Gen0 |     Gen1 |   Gen2 | Allocated | Alloc Ratio |
+|--------------------------- |------------ |-------------------- |---------------:|------:|---------:|---------:|-------:|----------:|------------:|
+|         **SharpTokenV1_0_28_** | **CountTokens** | **1. (...)57. [19866]** | **5,235,908.1 ns** |  **1.00** | **601.5625** | **289.0625** |      **-** | **3805771 B** |        **1.00** |
+|       TiktokenSharpV1_0_5_ | CountTokens | 1. (...)57. [19866] | 1,547,061.7 ns |  0.30 | 250.0000 | 125.0000 |      - | 1571154 B |        0.41 |
+|                  Tiktoken_ | CountTokens | 1. (...)57. [19866] |   822,031.5 ns |  0.16 |  66.4063 |        - |      - |  419817 B |        0.11 |
+|                            |             |                     |                |       |          |          |        |           |             |
+|         **SharpTokenV1_0_28_** | **CountTokens** |       **Hello, World!** |     **3,267.7 ns** |  **1.00** |   **0.6752** |        **-** |      **-** |    **4240 B** |        **1.00** |
+|       TiktokenSharpV1_0_5_ | CountTokens |       Hello, World! |     6,585.6 ns |  2.02 |   2.1820 |   0.0381 |      - |   13728 B |        3.24 |
+|                  Tiktoken_ | CountTokens |       Hello, World! |       440.1 ns |  0.13 |   0.0429 |        - |      - |     272 B |        0.06 |
+|                            |             |                     |                |       |          |          |        |           |             |
+|         **SharpTokenV1_0_28_** | **CountTokens** | **King(...)edy. [275]** |    **62,516.4 ns** |  **1.00** |   **8.5449** |   **0.3662** |      **-** |   **54160 B** |        **1.00** |
+|       TiktokenSharpV1_0_5_ | CountTokens | King(...)edy. [275] |    21,796.0 ns |  0.35 |   5.0964 |   0.2136 |      - |   32096 B |        0.59 |
+|                  Tiktoken_ | CountTokens | King(...)edy. [275] |     9,673.3 ns |  0.15 |   0.8850 |        - |      - |    5584 B |        0.10 |
+|                            |             |                     |                |       |          |          |        |           |             |
+|   **SharpTokenV1_0_28_Encode** |      **Encode** | **1. (...)57. [19866]** | **5,598,664.3 ns** |  **1.00** | **601.5625** | **296.8750** |      **-** | **3805769 B** |        **1.00** |
+| TiktokenSharpV1_0_5_Encode |      Encode | 1. (...)57. [19866] | 1,684,623.8 ns |  0.30 | 253.9063 | 128.9063 | 3.9063 | 1571158 B |        0.41 |
+|            Tiktoken_Encode |      Encode | 1. (...)57. [19866] |   863,306.6 ns |  0.15 |  80.0781 |  32.2266 |      - |  506425 B |        0.13 |
+|                            |             |                     |                |       |          |          |        |           |             |
+|   **SharpTokenV1_0_28_Encode** |      **Encode** |       **Hello, World!** |     **3,314.8 ns** |  **1.00** |   **0.6752** |   **0.0038** |      **-** |    **4240 B** |        **1.00** |
+| TiktokenSharpV1_0_5_Encode |      Encode |       Hello, World! |     6,709.1 ns |  2.03 |   2.1820 |   0.0458 |      - |   13728 B |        3.24 |
+|            Tiktoken_Encode |      Encode |       Hello, World! |       536.8 ns |  0.16 |   0.1144 |        - |      - |     720 B |        0.17 |
+|                            |             |                     |                |       |          |          |        |           |             |
+|   **SharpTokenV1_0_28_Encode** |      **Encode** | **King(...)edy. [275]** |    **62,433.2 ns** |  **1.00** |   **8.5449** |   **0.4883** |      **-** |   **54160 B** |        **1.00** |
+| TiktokenSharpV1_0_5_Encode |      Encode | King(...)edy. [275] |    21,861.3 ns |  0.35 |   5.0964 |   0.3052 |      - |   32096 B |        0.59 |
+|            Tiktoken_Encode |      Encode | King(...)edy. [275] |    10,308.4 ns |  0.17 |   1.0986 |   0.0153 |      - |    6904 B |        0.13 |
